2007-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-mtn.el: New file.

	* vc-hooks.el (vc-handled-backends): Add Mtn.

2007-09-13  Eli Zaretskii  <eliz@gnu.org>

	* files.el (find-file, find-file-other-window)
	(find-file-other-frame, find-file-existing, find-file-read-only)
	(find-file-read-only-other-window)
	(find-file-read-only-other-frame)
	(find-alternate-file-other-window, find-alternate-file): Doc fixes.

2007-09-13  Jari Aalto  <jari.aalto@cante.net>

	* man.el (Man-default-man-entry): At end of line, continue looking
	to the next line for possible end of hyphenated command.

2007-09-13  Chris Moore  <dooglus@gmail.com>

	* shell.el (shell-resync-dirs): Don't move the cursor relative to
	the command being edited.

2007-09-13  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gdb-ready): New variable.
	(gdb): Set it to nil.  Set gud-running to nil here...
	(gud-common-init): ...instead of here.

	* progmodes/gdb-ui.el (gdba, gdb-send, gdb-source-info):
	Use gdb-ready.  Discard input until GDB is ready to accept it.

2007-09-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (terminal-init-xterm): Add bindings for M-S- and
	C-M-S- keys.

2007-09-12  Martin Rudalics  <rudalics@gmx.at>

	* dired.el (dired-warning): Inherit from font-lock-warning-face to
	make it show up with eight colors.

2007-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-sanity-check-hunk): Fix up the case when unified
	diffs are concatenated with no intervening line.

2007-09-10  Dave Love  <fx@gnu.org>

	* progmodes/python.el: Merge changes from Dave Love's v2007-Sep-10.
	(python-font-lock-keywords): Update to the 2.5 version of the language.
	(python-quote-syntax): Let-bind font-lock-syntactic-keywords to nil.
	(python-backspace): Only behave funny in code.
	(python-compilation-regexp-alist): Add PDB stack trace regexp.
	(inferior-python-mode): Add PDB prompt regexp.
	(python-fill-paragraph): Refine the fenced-string regexp.